[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webserver-api01"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
